syntax = "proto3";

package media;
import "google/protobuf/timestamp.proto";

option csharp_namespace = "MediaService";

message MediaDto {
  string id = 1;
  string name = 2;
  string entity_id = 3;
  string slug = 4;
  string path = 5;
  string type = 6;
  string link = 7;
  bytes fileData = 8;
}

message MediaDtoList {
  repeated MediaDto medias = 1;
}

message GetByIdRequest {
  string id = 1;
}

message GetBySlugRequest {
  string slug = 1;
}

message DeleteRequest {
  string id = 1;
}

message GetMediasRequest {
  optional string entity_id = 1;
  optional string name = 2;
  optional string type = 3;
  optional string slug = 4;
}

message Empty {}

service MediaService {
  rpc CreateMedia(MediaDto) returns (MediaDto);
  rpc CreateMedias(MediaDtoList) returns (MediaDtoList);
  rpc UpdateMedia(MediaDto) returns (MediaDto);
  rpc DeleteMedia(DeleteRequest) returns (Empty);
  rpc GetMediaById(GetByIdRequest) returns (MediaDto);
  rpc GetMediaBySlug(GetBySlugRequest) returns (MediaDto);
  rpc GetMedias(GetMediasRequest) returns (MediaDtoList);
}
